# bsc

./: .gitignore  bsc.cabal
.devcontainer/: Dockerfile
src/Comp/: Classic.hs  Error.hs  ErrorTCompat.hs  ErrorUtil.hs  Eval.hs  FStringCompat.hs  FileNameUtil.hs  GHCPretty.lhs  IntegerUtil.hs  Log2.hs  PPrint.hs  PVPrint.hs  Position.hs  PreStrings.hs  Pretty.hs  SpeedyString.hs  Util.hs  Version.hs
src/Comp/Libs/: IOMutVar.hs  Sort.hs
src/Parsec/: Parsec.hs  ParsecChar.hs  ParsecCombinator.hs  ParsecExpr.hs  ParsecLanguage.hs  ParsecPerm.hs  ParsecPrim.hs  ParsecToken.hs
