cabal-version:      2.4
name:               bsc
version:            0.1.0.0
synopsis:           Bluespec Compiler

-- A longer description of the package.
-- description:
homepage:           https://github.com/B-Lang-org/bsc

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
author:             Phillip Bonhomme
maintainer:         phillip.bonhomme@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files:
    README.md

library
    exposed-modules:
        Parsec.ParsecPerm
        Parsec.ParsecChar
        Parsec.ParsecExpr
        Parsec.ParsecLanguage
        Parsec.ParsecCombinator
        Parsec.ParsecToken
        Parsec.ParsecPrim
        Parsec.Parsec

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: CPP
    build-depends:    base ^>=4.14.1.0
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable bsc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions: CPP
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
